# goit-pythonweb-hw-10

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
Tasks/: package-lock.json  package.json
Tasks/.parcel-cache/: 00da747caa3709f5  4996413d16dcf9fe.txt  53414ea0fe94c843  53f192f4d4864884  584204ab305740d6  5c6dc06a5e9c5dd5  70ef521a14db84a7  82d1ccc8d01bb54a.txt  c0cbbbe223466ce0  cf20b49e1290c340  fb0ad5e2c01214a9  lock.mdb
Tasks/src/js/: main.js
goit-pythonweb-hw-10/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
goit-pythonweb-hw-10/src/alembic/: env.py
goit-pythonweb-hw-10/src/alembic/versions/: 8cc671485236_.py
goit-pythonweb-hw-10/src/api/: contacts.py  users.py
goit-pythonweb-hw-10/src/conf/: config.py
goit-pythonweb-hw-10/src/repository/: contacts.py
goit-pythonweb-hw-10/src/services/: users.py
src/: schemas.py
src/alembic/: env.py
src/alembic/versions/: 0ec9a269b0e7_.py  256a5aa946bc_.py  289374ea772a_.py  90f221813700_.py  b4fd99704cde_.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/security/: hashing.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/templates/: example_email.html
